--- a/Frontend/src/app/shared/components/layout/layout.component.html
+++ b/Frontend/src/app/shared/components/layout/layout.component.html
@@ -1,11 +1,9 @@
 <app-navbar></app-navbar>
-<div class="container-fluid">
-  <div class="row">
-    <app-sidebar></app-sidebar>
-    
-    <!-- Main content -->
-    <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
-      <ng-content></ng-content>
-    </main>
-  </div>
+<div class="d-flex">
+  <app-sidebar></app-sidebar>
+  
+  <!-- Main content -->
+  <main class="layout-container flex-grow-1">
+    <ng-content></ng-content>
+  </main>
 </div>
