--- a/Frontend/src/app/features/admin/pages/manage-salaries/manage-salaries.component.html
+++ b/Frontend/src/app/features/admin/pages/manage-salaries/manage-salaries.component.html
@@ -131,12 +131,12 @@
               </ng-container>
 
               <!-- Allowances Column -->
-              <ng-container matColumnDef="allowances">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>البدلات</th>
+              <ng-container matColumnDef="bonus">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>المكافآت</th>
                 <td mat-cell *matCellDef="let salary">
-                  <div class="allowances-info">
+                  <div class="bonus-info">
                     <mat-icon class="plus-icon">add</mat-icon>
-                    {{ salary.allowances | currency:'SAR':'symbol':'1.0-0' }}
+                    {{ salary.bonus | currency:'SAR':'symbol':'1.0-0' }}
                   </div>
                 </td>
               </ng-container>
@@ -152,12 +152,12 @@
                 </td>
               </ng-container>
 
-              <!-- Net Salary Column -->
-              <ng-container matColumnDef="netSalary">
+              <!-- Total Salary Column -->
+              <ng-container matColumnDef="totalSalary">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>صافي الراتب</th>
                 <td mat-cell *matCellDef="let salary">
-                  <div class="net-salary">
-                    <strong>{{ salary.netSalary | currency:'SAR':'symbol':'1.0-0' }}</strong>
+                  <div class="total-salary">
+                    <strong>{{ salary.totalSalary | currency:'SAR':'symbol':'1.0-0' }}</strong>
                   </div>
                 </td>
               </ng-container>
