--- a/Frontend/src/app/features/admin/pages/manage-teachers/manage-teachers.component.html
+++ b/Frontend/src/app/features/admin/pages/manage-teachers/manage-teachers.component.html
@@ -35,12 +35,12 @@
             <table mat-table [dataSource]="dataSource" matSort class="teachers-table">
               
               <!-- Teacher Number Column -->
-              <ng-container matColumnDef="teacherNumber">
+              <ng-container matColumnDef="employeeNumber">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>رقم المعلم</th>
                 <td mat-cell *matCellDef="let teacher">
                   <div class="teacher-number">
                     <mat-icon class="teacher-icon">school</mat-icon>
-                    {{ teacher.teacherNumber }}
+                    {{ teacher.employeeNumber }}
                   </div>
                 </td>
               </ng-container>
@@ -68,13 +68,13 @@
                 </td>
               </ng-container>
 
-              <!-- Subject Column -->
-              <ng-container matColumnDef="subject">
-                <th mat-header-cell *matHeaderCellDef>المادة</th>
+              <!-- Specialization Column -->
+              <ng-container matColumnDef="specialization">
+                <th mat-header-cell *matHeaderCellDef>التخصص</th>
                 <td mat-cell *matCellDef="let teacher">
-                  <div class="subject-info">
+                  <div class="specialization-info">
                     <mat-icon>book</mat-icon>
-                    {{ teacher.subjectName }}
+                    {{ teacher.specialization }}
                   </div>
                 </td>
               </ng-container>
@@ -90,13 +90,13 @@
                 </td>
               </ng-container>
 
-              <!-- Salary Column -->
-              <ng-container matColumnDef="salary">
+              <!-- Base Salary Column -->
+              <ng-container matColumnDef="baseSalary">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>الراتب</th>
                 <td mat-cell *matCellDef="let teacher">
                   <div class="salary-info">
                     <mat-icon class="money-icon">attach_money</mat-icon>
-                    {{ teacher.salary | currency:'SAR':'symbol':'1.0-0' }}
+                    {{ teacher.baseSalary | currency:'SAR':'symbol':'1.0-0' }}
                   </div>
                 </td>
               </ng-container>
